added the print functionality and the oflline limit