@@ -36,6 +36,17 @@
           <artifactId>jackson-databind</artifactId>
           <version>2.15.2</version> 
         </dependency>
+        <dependency>
+          <groupId>com.google.zxing</groupId>
+          <artifactId>javase</artifactId>
+          <version>3.5.3</version>
+        </dependency>
+        <dependency>
+          <groupId>com.google.zxing</groupId>
+          <artifactId>core</artifactId>
+          <version>3.5.3</version>
+        </dependency>
+
 
     </dependencies>
     <build>
@@ -46,6 +57,18 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>11</release>
+                </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                  <release>17</release> 
+                  <compilerArgs>
+                    <arg>--add-reads</arg>
+                    <arg>com.pointofsale=ALL-UNNAMED</arg>
+                  </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
